--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                         <a class="page-scroll" href="#about">About Me</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                                        <a class="page-scroll" href="#portfolio">Projects</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#blog">Blog</a>
